# yay_crm

./: .env.example  .gitignore  Cargo.toml  tree.txt
.cargo/: config.toml  config.toml.example
src/: main.rs
src/constants/: connection.rs  mod.rs  validation.rs
src/controllers/: clinical_api_controller.rs  clinics_api_controller.rs  clinics_html_controller.rs  enterprise_api_controller.rs  enterprise_html_controller.rs  help_html_controller.rs  mod.rs  school_api_controller.rs  school_html_controller.rs  users_api_controller.rs  users_html_controller.rs
src/db/: clinical_db.rs  config.rs  enterprise_db.rs  mod.rs  school_db.rs  users_db.rs
src/error/: auth.rs  clinical_error.rs  enterprise_error.rs  mod.rs  school_error.rs  user_error.rs
src/models/: clinical_model.rs  enterprise_model.rs  mod.rs  sales_model.rs  school_model.rs  user_query_params_model.rs  users_model.rs
src/static/: clinical_edit.hbs  clinical_new.hbs  clinical_not_found.hbs  clinical_table.hbs  create_user.hbs  edit_enterprise.hbs  edit_user.hbs  enterprise_edit.hbs  enterprise_help_avance_html.hbs  enterprise_help_html.hbs  enterprise_help_services_html.hbs  enterprise_new.hbs  enterprise_not_found.hbs  enterprise_table.hbs  example.html  help_enterprise_avance_html.hbs  help_enterprise_html.hbs  help_enterprise_services_html.hbs  help_html.hbs  new_enterprise.hbs  new_user.hbs  school_edit.hbs  school_new.hbs  school_table.hbs  test.json  user_delete_modal.hbs  user_edit.hbs  user_new.hbs  user_not_found.hbs  user_table.hbs  uuid_only.hbs
src/utils/: crud.rs  env.rs  fs_utils.rs  (+5 more)
